Change Log
==========


2019-09-06 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* minor logging changes (#408)
* updated api interface with IDURL fixes
* solving proxy router issues



2019-09-06 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* trying to solve proxy router issue for nodes behind same proxy router  (#407)
* bug fix in id_rotator() machine when not enough sources are found need to continue



2019-09-06 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* bug fix in id_url
* minor fixes in packet logging



2019-09-06 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* py3 bug fix in command line interface
* restore keys one by one instead of all at once (#403)
* fix in key_ring (#402)
* fix in backup_rebuilder() automat
* added main/config_defaults.py to simplify configurations
* fixes in index_synchronizer() automat
* added 'services/gateway/packet-log-enabled' config and improved packets logging



2019-09-01 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* bug fix in restore_worker()  (#401)



2019-09-01 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* prevent sending outdated data to my suppliers (#399)
* few more critical bug fixes



2019-08-31 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* minor adjustments in packets logging
* fix issue when supplier is switching (#398)
* bug fix in proxy_receiver() (#397)
* critical bug fix in contactsdb (#396)
* minor fixes in logging (#395)
* open all known shares at startup (#394)



2019-08-27 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* process "identity-url-changed" event in service_private_messages() (#392)
* process "identity-url-changed" event in service_supplier() (#391)



2019-08-23 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)
