@@ -55,10 +55,28 @@ class MyIPPortService(LocalService):
     def start(self):
         from stun import stun_client
         from main import settings
+        from lib import misc
         stun_client.A('init', settings.getUDPPort())
+        known_external_ip = misc.readExternalIP()
+        if not known_external_ip or known_external_ip == '127.0.0.1':
+            self._do_stun()
         return True
 
     def stop(self):
         from stun import stun_client
         stun_client.A('shutdown')
         return True
+
+    def _do_stun(self):
+        from stun import stun_client
+        stun_client.A().dropMyExternalAddress()
+        stun_client.A('start', self._on_stun_result)
+
+    def _on_stun_result(self, stun_result, nat_type, my_ip, details):
+        from logs import lg
+        from twisted.internet import reactor
+        if stun_result != 'stun-success' or not my_ip or my_ip == '127.0.0.1':
+            lg.warn('stun my external IP failed, retry after 10 seconds')
+            reactor.callLater(10, self._do_stun)  # @UndefinedVariable
+        else:
+            lg.info('stun success  nat_type=%r, my_ip=%r, details=%r' % (nat_type, my_ip, details, ))
