@@ -70,7 +70,7 @@ from io import open
 
 #------------------------------------------------------------------------------
 
-_Debug = True
+_Debug = False
 _DebugLevel = 12
 
 _PacketLogFileEnabled = False
